--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_SOCKET_URL=https://pixeltalk-server.onrender.com
-# VITE_SOCKET_URL=http://localhost:3000
+# VITE_SOCKET_URL=https://pixeltalk-server.onrender.com
+VITE_SOCKET_URL=http://localhost:3000
